add error-prone to builder + fixes and refactorings